chore: implement validation leaks a level git (#3)

--- a/.github/linters/.gitleaks.toml
+++ b/.github/linters/.gitleaks.toml
@@ -140,6 +140,7 @@ title = "gitleaks config"
             '''support@hadenlabs.com''',
             '''santiago.rojas@inetum.world''',
             '''miguel.huamani@inetum.world''',
+            '''luis@yopmail.com''',
             '''luis.mayta@inetum.world''',
         ]
 
