--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-files = package.json
+files = package.json provision/generators/README.yaml
 commit = False
 tag = False
 current_version = 0.0.0
@@ -9,6 +9,10 @@ search = {current_version}
 replace = {new_version}
 
 [bumpversion:file:package.json]
+search = {current_version}
+replace = {new_version}
+
+[bumpversion:file:provision/generators/README.yaml]
 search = {current_version}
 replace = {new_version}
 
@@ -23,7 +27,7 @@ exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules
 doctests = True
 inline-quotes = single
 accept-encodings = utf-8
-per-file-ignores = 
+per-file-ignores =
 	tests/*.py: S101, Z432
 	hooks/*.py: T001
 	**/*.py: D100, D104, D106, D401, X100
@@ -62,7 +66,7 @@ test = pytest
 
 [tool:pytest]
 norecursedirs = "build" "docs" "docs[\/]_build" ".egg"
-addopts = 
+addopts =
 	-s -v
 	--cov terraform-pagerduty-user
 	--cov-report html
